Update and rename 版本3.html to indes.html

--- a/indes.html
+++ b/indes.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="浙江万里学院及相关院校导航">
     <meta property="og:image" content="images/万里1.jpg">
     
-    <title>教育机构索引</title>
+    <title>浙江省万里教育集团</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap');
 
