--- a/index-3.html
+++ b/index-3.html
@@ -157,25 +157,25 @@
     <main>
         <section class="nav-grid">
             <a href="https://portal.school.edu/1" target="_blank" rel="noopener">
-                <img src="images/万里1.webp" 
+                <img src="images/万里1.jpg" 
                      srcset="images/万里1.jpg 1x, images/万里1@2x.webp 2x"
                      alt="浙江万里学院全景">
                 <div class="caption">浙江万里学院</div>
             </a>
             <a href="https://portal.school.edu/2" target="_blank" rel="noopener">
-                <img src="images/宁诺1.webp" 
+                <img src="images/宁诺1.jpg" 
                      srcset="images/宁诺1.jpg 1x, images/宁诺1@2x.webp 2x"
                      alt="宁波诺丁汉大学">
                 <div class="caption">宁波诺丁汉</div>
             </a>
             <a href="https://portal.school.edu/3" target="_blank" rel="noopener">
-                <img src="images/宁诺附中1.webp" 
+                <img src="images/宁诺附中1.jpg" 
                      srcset="images/宁诺附中1.jpg 1x, images/宁诺附中1@2x.webp 2x"
                      alt="宁诺附中">
                 <div class="caption">宁诺附中</div>
             </a>
             <a href="https://portal.school.edu/4" target="_blank" rel="noopener">
-                <img src="images/NBIS1.webp" 
+                <img src="images/NBIS1.jpg" 
                      srcset="images/NBIS1.jpg 1x, images/NBIS1@2x.webp 2x"
                      alt="NBIS国际学校">
                 <div class="caption">NBIS</div>
