--- a/index-0424.html
+++ b/index-0424.html
@@ -172,11 +172,11 @@
             </a>
             <a href="https://www.nbsedu.com/index.php?r=space/school/theme/content/index&sid=3433000319&cid=7875789" target="_blank" rel="noopener">
                 <img src="images/宁诺附中1.jpg" alt="宁诺附中">
-                <div class="caption">宁波诺丁汉大学</br>附属中学</div>
+                <div class="caption">宁波诺丁汉大学附属中学</div>
             </a>
             <a href="https://www.nbis.net.cn/sePages/seNews_10327_1.html" target="_blank" rel="noopener">
                 <img src="images/NBIS1.jpg" alt="宁波英伦外籍人员子女学校">
-                <div class="caption">宁波英伦</br>外籍人员子女学校</div>
+                <div class="caption">宁波英伦外籍人员子女学校</div>
             </a>
         </section>
 
