--- a/index-0424.html
+++ b/index-0424.html
@@ -183,7 +183,7 @@
         <section class="job-links">
             <h2>热门招聘</h2>
             <ul>
-                <li><a href="https://rczp.zwu.edu.cn/apply/getNotice.action?keycode=f1e29529-5da1-4cf5-be0c-61f255fb5e2c" target="_blank" rel="noopener">浙江万里学院2025公开招聘</a></li>
+                <li><a href="https://mp.weixin.qq.com/s/dno2N_8FnM_CsWkJYiEdtw" target="_blank" rel="noopener">浙江万里学院2025公开招聘</a></li>
                 <!-- <li><a href="https://example.com/job2" target="_blank" rel="noopener">招聘链接2</a></li>
                 <li><a href="https://example.com/job3" target="_blank" rel="noopener">招聘链接3</a></li>
                 <li><a href="https://example.com/job4" target="_blank" rel="noopener">招聘链接4</a></li>
