--- a/index-0424.html
+++ b/index-0424.html
@@ -175,15 +175,15 @@
                 <div class="caption">宁波诺丁汉大学附属中学</div>
             </a>
             <a href="https://www.nbis.net.cn/sePages/seNews_10327_1.html" target="_blank" rel="noopener">
-                <img src="images/NBIS1.jpg" alt="宁波英伦外籍人员子女学校">
-                <div class="caption">宁波英伦外籍人员子女学校</div>
+                <img src="images/NBIS1.jpg" alt="浙江宁波英伦外籍人员子女学校">
+                <div class="caption">浙江宁波英伦外籍人员子女学校</div>
             </a>
         </section>
 
         <section class="job-links">
             <h2>热门招聘</h2>
             <ul>
-                <li><a href="https://mp.weixin.qq.com/s/dno2N_8FnM_CsWkJYiEdtw" target="_blank" rel="noopener">浙江万里学院2025公开招聘</a></li>
+                <li><a href="https://mp.weixin.qq.com/s/dno2N_8FnM_CsWkJYiEdtw" target="_blank" rel="noopener">浙江万里学院2025年公开招聘企业编制工作人员公告</a></li>
                 <!-- <li><a href="https://example.com/job2" target="_blank" rel="noopener">招聘链接2</a></li>
                 <li><a href="https://example.com/job3" target="_blank" rel="noopener">招聘链接3</a></li>
                 <li><a href="https://example.com/job4" target="_blank" rel="noopener">招聘链接4</a></li>
