--- a/index1.html
+++ b/index1.html
@@ -163,19 +163,19 @@
     <main>
         <section class="nav-grid">
             <a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&amp;__biz=MzUzMjU5ODAzMw==&amp;scene=110#wechat_redirect" target="_blank" rel="noopener">
-                <img src="images/万里4.jpg" alt="浙江万里学院">
+                <img src="images/wlx-s.jpg" alt="浙江万里学院">
                 <div class="caption">浙江万里学院</div>
             </a>
             <a href="https://jobs.nottingham.edu.cn/" target="_blank" rel="noopener">
-                <img src="images/宁诺1.jpg" alt="宁波诺丁汉大学">
+                <img src="images/ndhx-s.jpg" alt="宁波诺丁汉大学">
                 <div class="caption">宁波诺丁汉大学</div>
             </a>
             <a href="https://www.nbsedu.com/index.php?r=space/school/theme/content/index&sid=3433000319&cid=7875789" target="_blank" rel="noopener">
-                <img src="images/宁诺附中1.jpg" alt="宁诺附中">
+                <img src="images/nnfsx-s.jpg" alt="宁诺附中">
                 <div class="caption">宁波诺丁汉大学附属中学</div>
             </a>
             <a href="https://www.nbis.net.cn/sePages/seNews_10327_1.html" target="_blank" rel="noopener">
-                <img src="images/NBIS1.jpg" alt="浙江宁波英伦外籍人员子女学校">
+                <img src="images/ylx-s.jpg" alt="浙江宁波英伦外籍人员子女学校">
                 <div class="caption">浙江宁波英伦外籍人员子女学校</div>
             </a>
         </section>
