--- a/index1.html
+++ b/index1.html
@@ -166,7 +166,7 @@
                 <img src="images/wlx-s.jpg" alt="浙江万里学院">
                 <div class="caption">浙江万里学院</div>
             </a>
-            <a href="https://jobs.nottingham.edu.cn/" target="_blank" rel="noopener">
+            <a href="https://jobs.nottingham.edu.cn/jobs-at-unnc/" target="_blank" rel="noopener">
                 <img src="images/ndhx-s.jpg" alt="宁波诺丁汉大学">
                 <div class="caption">宁波诺丁汉大学</div>
             </a>
@@ -174,7 +174,7 @@
                 <img src="images/nnfsx-s.jpg" alt="宁诺附中">
                 <div class="caption">宁波诺丁汉大学附属中学</div>
             </a>
-            <a href="https://www.nbis.net.cn/sePages/seNews_10327_1.html" target="_blank" rel="noopener">
+            <a href="https://www.nbis.net.cn/Pages/xfnews_310_1.html" target="_blank" rel="noopener">
                 <img src="images/ylx-s.jpg" alt="浙江宁波英伦外籍人员子女学校">
                 <div class="caption">浙江宁波英伦外籍人员子女学校</div>
             </a>
