Update index.html 黑字

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             text-align: center;
             font-size: 2rem;
             font-weight: bold;
-            color: #FF5733;  /* 采用与图中的文字颜色一致 */
+            color: #2c3e50;  /* 改为和下面黑色文字一致 */
             margin-bottom: 30px;
         }
 
