--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             z-index: -1; 
         }
 
-        /* 新增：顶部文字 */
+        /* 新增：顶部文字样式 */
         .header-text {
             text-align: center;
-            font-size: 2rem;
-            font-weight: bold;
-            color: #2c3e50;  /* 改为和下面黑色文字一致 */
+            font-size: 1.1rem; /* 修改：改为与下方 caption 字体大小一致 */
+            font-weight: 600;   /* 修改：匹配 caption 的字体粗细 */
+            color: #2c3e50;     /* 修改：匹配 caption 的字体颜色 */
             margin-bottom: 30px;
         }
 
@@ -120,8 +120,8 @@
             border-radius: 8px;
             background-color: #f9f9f9;
             transition: all 0.3s ease;
-            width: 300px; /* Set the width of the links to match the other sections */
-            margin: 0 auto; /* Center the links */
+            width: 300px;
+            margin: 0 auto;
         }
 
         .job-links a:hover {
@@ -169,7 +169,7 @@
     </style>
 </head>
 <body>
-    <!-- 新增：顶部文字 -->
+    <!-- 新增：顶部标题 -->
     <div class="header-text">院校招聘频道入口</div>
 
     <main>
@@ -196,15 +196,7 @@
             <h2>热门招聘</h2>
             <ul>
                 <li><a href="https://mp.weixin.qq.com/s/dno2N_8FnM_CsWkJYiEdtw" target="_blank" rel="noopener">浙江万里学院2025年公开招聘企业编制工作人员公告</a></li>
-                <!-- <li><a href="https://example.com/job2" target="_blank" rel="noopener">招聘链接2</a></li>
-                <li><a href="https://example.com/job3" target="_blank" rel="noopener">招聘链接3</a></li>
-                <li><a href="https://example.com/job4" target="_blank" rel="noopener">招聘链接4</a></li>
-                <li><a href="https://example.com/job5" target="_blank" rel="noopener">招聘链接5</a></li>
-                <li><a href="https://example.com/job6" target="_blank" rel="noopener">招聘链接6</a></li>
-                <li><a href="https://example.com/job7" target="_blank" rel="noopener">招聘链接7</a></li>
-                <li><a href="https://example.com/job8" target="_blank" rel="noopener">招聘链接8</a></li>
-                <li><a href="https://example.com/job9" target="_blank" rel="noopener">招聘链接9</a></li>
-                <li><a href="https://example.com/job10" target="_blank" rel="noopener">招聘链接10</a></li> -->
+                <!-- 可添加更多招聘链接 -->
             </ul>
         </section>
     </main>
