Update index.html head 1.1-1.25

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             z-index: -1; 
         }
 
-        /* 新增：顶部文字样式 */
+        /* 修改：顶部文字样式，字体稍大以获得视觉一致性 */
         .header-text {
             text-align: center;
-            font-size: 1.1rem; /* 修改：改为与下方 caption 字体大小一致 */
-            font-weight: 600;   /* 修改：匹配 caption 的字体粗细 */
-            color: #2c3e50;     /* 修改：匹配 caption 的字体颜色 */
+            font-size: 1.25rem;  /* 从 1.1rem 提升，提升视觉存在感 */
+            font-weight: 600;     /* 与 caption 一致 */
+            color: #2c3e50;       /* 与 caption 一致的深色 */
             margin-bottom: 30px;
         }
 
@@ -169,7 +169,7 @@
     </style>
 </head>
 <body>
-    <!-- 新增：顶部标题 -->
+    <!-- 新增：顶部标题，视觉上与 caption 保持一致或略突出 -->
     <div class="header-text">院校招聘频道入口</div>
 
     <main>
@@ -196,7 +196,7 @@
             <h2>热门招聘</h2>
             <ul>
                 <li><a href="https://mp.weixin.qq.com/s/dno2N_8FnM_CsWkJYiEdtw" target="_blank" rel="noopener">浙江万里学院2025年公开招聘企业编制工作人员公告</a></li>
-                <!-- 可添加更多招聘链接 -->
+                <!-- 更多招聘链接可添加在此 -->
             </ul>
         </section>
     </main>
