--- a/index.html
+++ b/index.html
@@ -43,13 +43,20 @@
             z-index: -1; 
         }
 
-        /* 修改：顶部文字样式，字体稍大以获得视觉一致性 */
+        /* ✅ 修改：顶部容器增加高度或内边距使其远离页面顶部 */
+        .header-container {
+            height: 140px; /* 原80px → 140px，更充裕的顶部留白 */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* ✅ 标题样式，仍保持与“热门招聘”一致 */
         .header-text {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #2c3e50;
             text-align: center;
-            font-size: 1.25rem;  /* 从 1.1rem 提升，提升视觉存在感 */
-            font-weight: 600;     /* 与 caption 一致 */
-            color: #2c3e50;       /* 与 caption 一致的深色 */
-            margin-bottom: 30px;
         }
 
         .nav-grid {
@@ -169,8 +176,10 @@
     </style>
 </head>
 <body>
-    <!-- 新增：顶部标题，视觉上与 caption 保持一致或略突出 -->
-    <div class="header-text">院校招聘频道入口</div>
+    <!-- ✅ 顶部标题容器，增加高度以拉开与页面顶边距离 -->
+    <div class="header-container">
+        <div class="header-text">院校招聘频道入口</div>
+    </div>
 
     <main>
         <section class="nav-grid">
@@ -196,7 +205,6 @@
             <h2>热门招聘</h2>
             <ul>
                 <li><a href="https://mp.weixin.qq.com/s/dno2N_8FnM_CsWkJYiEdtw" target="_blank" rel="noopener">浙江万里学院2025年公开招聘企业编制工作人员公告</a></li>
-                <!-- 更多招聘链接可添加在此 -->
             </ul>
         </section>
     </main>
